--- a/style.css
+++ b/style.css
@@ -57,3 +57,13 @@ button {
 #keys button:active {
     background-color: rgba(255, 255, 255, 0.623);
 }
+@media (max-width:400px){
+    #calculator {
+        max-width: 350px;
+    }
+    button{
+        width: 50px;
+        height: 50px;
+        font-size: 20px;
+    }
+}
